# To-do-List-Website

./: .gitignore  README.md  pyproject.toml  requirements.txt  website.py
blueprints/: auth.py  tasks.py
database/: tables.py
src/: app_configuration.py  website.py
src/blueprints/: auth.py  tasks.py  user.py
src/models/: Tasks.py  Users.py
src/templates/: home.html
src/templates/tasks/: tasks.html
src/templates/user/: settings.html
templates/: base.html  create_task.html  home.html  login.html  modify_task.html  registration.html  settings.html  tasks.html  user.html
templates/auth/: login.html  registration.html
templates/tasks/: create_task.html  modify_task.html
templates/user/: user.html
